gcc/testsuite/rust/rustc/ui/moves/issue-99470-move-out-of-some.rs
fn main() {
    let x: &Option<Box<i32>> = &Some(Box::new(0));

    match x {
// { dg-error ".E0507." "" { target *-*-* } .-1 }
        &Some(_y) => (),
        &None => (),
    }
}

